--- a/StudySpark_Project/pyproject.toml
+++ b/StudySpark_Project/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Your Name"]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.11"
+python = ">=3.11, <3.13"
 streamlit = ">=1.40.0"
 python-dotenv = ">=1.0.0"
 google-genai = ">=1.0.0"
