--- a/StudySpark_Project/pyproject.toml
+++ b/StudySpark_Project/pyproject.toml
@@ -11,8 +11,7 @@ streamlit = ">=1.40.0"
 python-dotenv = ">=1.0.0"
 google-genai = ">=1.0.0"
 langfuse = ">=2.0.0"
-PyPDF2 = ">=3.0.0"
-pymupdf = ">=1.23.0"
+pypdf = ">=3.0.0"
 
 [build-system]
 requires = ["poetry-core"]
